@@ -1,4 +1,4 @@
-# $Id: svn.rb,v 1.3 2005-04-10 09:34:54 yanagita Exp $
+# $Id: svn.rb,v 1.4 2005-06-13 05:49:19 fdiary Exp $
 # Copyright (C) 2003, Koichiro Ohba <koichiro@meadowy.org>
 # Copyright (C) 2003, Yasuo Itabashi <yasuo_itabashi{@}hotmail.com>
 # You can distribute this under GPL.
@@ -42,18 +42,19 @@ module Hiki
       end
     end
 
-    def commit(page)
+    def commit(page, msg = default_msg)
+$stderr.puts msg
       Dir.chdir("#{@data_path}/text") do
         system("svn add -- #{page.escape} > /dev/null 2>&1".untaint)
         system("svn propdel svn:mime-type -- #{page.escape} > /dev/null 2>&1".untaint)
-        system("svn ci -m '#{ENV['REMOTE_ADDR']} - #{ENV['REMOTE_HOST']}' > /dev/null 2>&1".untaint)
+        system("svn ci -m '#{msg}' > /dev/null 2>&1".untaint)
       end
     end
 
-    def delete(page)
+    def delete(page, msg = default_msg)
       Dir.chdir("#{@data_path}/text") do
         system("svn remove -- #{page.escape} > /dev/null 2>&1".untaint)
-        system("svn ci -m '#{ENV['REMOTE_ADDR']} - #{ENV['REMOTE_HOST']}' > /dev/null 2>&1".untaint)
+        system("svn ci -m '#{msg}' > /dev/null 2>&1".untaint)
       end
     end
   end
